# anomalyops-copilot

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
copilot/answering/: grounded.py
copilot/api/: app.py  errors.py  query_service.py  settings.py
copilot/clients/: anomaly_api.py
copilot/evals/: runner.py  schemas.py
copilot/ingestion/: chunking.py  manifest.py  pipeline.py  source_discovery.py
copilot/retrieval/: citations.py  context.py  embeddings.py  pgvector.py  search.py  similarity.py
copilot/schemas/: anomaly.py  anomaly_tools.py  answer.py  chunk.py  query.py  retrieval.py  source.py  triage.py
copilot/services/: triage.py
copilot/storage/: chunks.py  database.py  models.py
copilot/tools/: anomaly.py
data_sources/anomaly_detection_platform/: README.md
data_sources/anomaly_detection_platform/source_code/: Dockerfile.api  Dockerfile.dashboard  alert_events.py  alerts.py  api.py  config.py  dashboard.py  db.py  (+11 more)
evals/: retrieval_cases.json
scripts/: ingest_sources.py  init_pgvector.py  query_manifest.py  run_retrieval_evals.py  search_pgvector.py  store_chunk_manifest.py
tests/: conftest.py  test_anomaly_api_client.py  test_anomaly_tools.py  test_answer_schema.py  test_api_health.py  test_api_settings.py  test_chunk_storage.py  test_chunking.py  test_citations.py  test_database.py  test_embeddings.py  test_grounded_answer_builder.py  test_ingest_sources_script.py  test_ingestion_pipeline.py  test_local_cli_e2e.py  test_manifest.py  test_pgvector_retrieval.py  test_query_api.py  test_query_manifest.py  test_query_schema.py  test_query_service.py  test_retrieval_context.py  test_retrieval_eval_fixtures.py  test_retrieval_eval_runner.py  test_scaffold.py  test_search.py  test_search_pgvector.py  test_similarity.py  test_source_discovery.py  test_storage_models.py  test_store_chunk_manifest.py  test_triage_service.py
tests/integration/: test_pgvector_query_flow.py
(+12 files in other folders)
